[website] Add 'Cookies' lib

--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -73,6 +73,9 @@
 <!-- Semantic UI -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
+<!--  Cookies lib -->
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
+
 <!-- Global methods -->
 <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/ui-alerts.js' %}"></script>
