[website][profile] Add personal info edit

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -13,6 +13,7 @@
 
 
 {% block content %}
+    <div id="edit_form_modal_container"></div>
 
     <div class="ui padded stackable grid" style="text-align: left; padding-top: 20px">
         <div class="two wide column"></div>
