[website] Search refactoring

--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -42,6 +42,7 @@
 
 {% block js %}
 
+    <script type="text/javascript" src="{% static 'departments/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/main.js' %}"></script>
 
 {% endblock %}
