--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -33,6 +33,7 @@
 
 {% block js %}
 
+    <script type="text/javascript" src="{% static 'departments/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'profile/js/main.js' %}"></script>
 
 {% endblock %}
