--- a/website/templates/cloud.html
+++ b/website/templates/cloud.html
@@ -53,6 +53,7 @@
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 
+    <script type="text/javascript" src="{% static 'cloud/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'cloud/js/main.js' %}"></script>
 
 {% endblock %}
