--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -16,15 +16,7 @@
 
     <div class="ui padded grid">
         <div class="no-margin-padding column">
-            <div class="ui segment" id="search_container" style="height: 72px; text-align: left;">
-                <div class="ui loading search">
-                    <div class="ui input">
-                        <input class="prompt" id="search" type="text" placeholder="Enter search query"
-                               style="border-radius: 50px;">
-                    </div>
-                    <div class="search results"></div>
-                </div>
-            </div>
+            <div class="ui segment" id="search_container"></div>
             <div class="ui segment" id="breadcrumbs_container"
                  style="height: 71px; text-align: left; margin-top: -15px;">
             </div>
@@ -42,7 +34,7 @@
 
 {% block js %}
 
-    <script type="text/javascript" src="{% static 'departments/js/search.js' %}"></script>
+    <script type="text/javascript" src="{% static 'website/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/main.js' %}"></script>
 
 {% endblock %}
