[website][students] Add search

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -15,8 +15,9 @@
 
 {% block content %}
 
-    <div class="ui padded centered grid">
-        <div class="eight wide column">
+    <div class="ui padded grid">
+        <div class="no-margin-padding column">
+            <div class="ui segment" id="search_container"></div>
             <div class="ui basic segment divided items" id="students_container"></div>
             <div class="ui centered button" id="load_button" onclick="load_students()">Load more</div>
         </div>
@@ -27,6 +28,7 @@
 
 {% block js %}
 
+    <script type="text/javascript" src="{% static 'website/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'students/js/main.js' %}"></script>
 
 {% endblock %}
