--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -17,7 +17,7 @@
 
     <div class="ui padded grid">
         <div class="no-margin-padding column">
-            <div class="ui segment" id="search_container"></div>
+            {% include 'search.html' %}
             <div class="ui basic segment divided items" id="students_container"></div>
             <div class="ui centered button" id="load_button" onclick="load_students()">Load more</div>
         </div>
@@ -28,7 +28,7 @@
 
 {% block js %}
 
-    <script type="text/javascript" src="{% static 'website/js/search.js' %}"></script>
+    <script type="text/javascript" src="{% static 'students/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'students/js/main.js' %}"></script>
 
 {% endblock %}
