[website][students] Refactor page

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -18,8 +18,7 @@
     <div class="ui padded grid">
         <div class="no-margin-padding column">
             {% include 'search.html' %}
-            <div class="ui basic segment divided items" id="students_container"></div>
-            <div class="ui centered button" id="load_button" onclick="load_students()">Load more</div>
+            <div id="students_container"></div>
         </div>
     </div>
 
