[website][students] Add info about specific student

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -18,7 +18,7 @@
     <div class="ui padded grid">
         <div class="no-margin-padding column">
             {% include 'search.html' %}
-            <div id="students_container"></div>
+            <div id="students_container" style="padding-top: 20px"></div>
         </div>
     </div>
 
