[website][departments] Save state to url; add related-subjects page

--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -18,14 +18,12 @@
         <div class="no-margin-padding column">
             {% include 'search.html' %}
             <div class="ui segment" id="breadcrumbs_container"
-                 style="height: 71px; text-align: left; margin-top: -15px;">
-            </div>
+                 style="height: 71px; text-align: left; margin-top: 0"></div>
 
             <div id="modal"></div>
-            <div class="ui divided relaxed items"
-                 id="departments_container"
-                 style="margin: 40px; text-align: left">
-            </div>
+
+            <div class="ui centered stackable grid" id="departments_container"></div>
+
         </div>
     </div>
 
