[website][profile] Add links to departments pages

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -15,9 +15,8 @@
 {% block content %}
     <div id="edit_form_modal_container"></div>
 
-    <div class="ui padded stackable grid" style="text-align: left; padding-top: 20px">
-        <div class="two wide column"></div>
-        <div class="six wide column">
+    <div class="ui padded centered stackable grid" style="text-align: left; padding-top: 20px">
+        <div class="four wide column">
             <div class="ui basic no-margin-padding segment" style="min-height: 80px"
                  id="personal_info_container"></div>
         </div>
@@ -25,7 +24,6 @@
             <div class="ui segment" style="min-height: 80px"
                  id="user_department_container"></div>
         </div>
-        <div class="two wide column"></div>
     </div>
 
 {% endblock %}
