[website][students] Add student department hierarchy

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -28,6 +28,7 @@
 {% block js %}
 
     <script type="text/javascript" src="{% static 'students/js/search.js' %}"></script>
+    <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
     <script type="text/javascript" src="{% static 'students/js/main.js' %}"></script>
 
 {% endblock %}
