--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -32,6 +32,7 @@
 {% block js %}
 
     <script type="text/javascript" src="{% static 'departments/js/search.js' %}"></script>
+    <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
     <script type="text/javascript" src="{% static 'profile/js/main.js' %}"></script>
 
 {% endblock %}
