--- a/website/templates/cloud.html
+++ b/website/templates/cloud.html
@@ -24,6 +24,9 @@
             <div id="modal"></div>
             <div class="ui basic segment" style="min-height: 100px; margin-top: 0;">
                 <div id="posts_container"></div>
+                <div class="ui basic button" id="load_more_btn" onclick="load_posts_list()">
+                    load more...
+                </div>
             </div>
         </div>
     </div>
