--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -1,10 +1,18 @@
 <div class="ui segment" id="search_container">
-    <div class="ui search">
-        <div class="ui left icon input">
-            <i class="search icon"></i>
-            <input class="prompt" id="search" type="text" placeholder="Enter search query"
-                   style="border-radius: 50px;">
+    <div class="ui stackable grid">
+        <div class="left floated fourteen wide column">
+            <div class="ui fluid search">
+                <div class="ui left icon fluid input" style="max-width: 600px">
+                    <i class="search icon"></i>
+                    <input class="prompt" id="search" type="text" placeholder="Enter search query"
+                           style="border-radius: 50px;">
+                </div>
+                <div class="search results"></div>
+            </div>
         </div>
-        <div class="search results"></div>
+        <div class="two wide column">
+            <a class="ui circular basic fluid button" href="{% url 'new_post' %}">Add post</a>
+        </div>
     </div>
+
 </div>
