[website][post_edit] Add autosaving

--- a/website/templates/new_post_page.html
+++ b/website/templates/new_post_page.html
@@ -19,7 +19,7 @@
             <div class="six wide computer twelve wide tablet column">
                 <div id="bodies_editor_container"></div>
                 <div style="margin-top: 20px">
-                    <div class="ui basic mini button" onclick="add_post_body()">add body</div>
+                    <div class="ui basic mini button" onclick="new_draft_post()">add body</div>
                 </div>
             </div>
 
