[website] Add editor to main navbar

--- a/website/templates/main_navbar.html
+++ b/website/templates/main_navbar.html
@@ -39,6 +39,12 @@
                 </li>
 
                 <li>
+                    <a href="{% url 'new_post' %}">
+                        Editor <i style="font-size: 16px;" class="pull-right hidden-xs showopacity fas pencil icon"></i>
+                    </a>
+                </li>
+
+                <li>
                     <a href="{% url 'departments' %}">
                         Departments <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-university"></i>
                     </a>
