--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -1,6 +1,6 @@
 <div class="ui segment" id="search_container">
     <div class="ui stackable grid">
-        <div class="left floated fourteen wide column">
+        <div class="left floated sixteen wide column">
             <div class="ui fluid search">
                 <div class="ui left icon fluid input" style="max-width: 600px">
                     <i class="search icon"></i>
@@ -9,9 +9,6 @@
                 </div>
                 <div class="search results"></div>
             </div>
-        </div>
-        <div class="two wide column">
-            <a class="ui circular basic fluid button" href="{% url 'new_post' %}">Add post</a>
         </div>
     </div>
 
