--- a/website/templates/new_post_page.html
+++ b/website/templates/new_post_page.html
@@ -17,10 +17,15 @@
         <div class="ui centered stackable grid" style="padding-top: 100px; text-align: left">
 
             <div class="six wide computer twelve wide tablet column">
-                <div id="bodies_editor_container"></div>
-                <div style="margin-top: 20px">
-                    <div class="ui basic mini button" onclick="new_draft_post()">add body</div>
+                <div class="ui left labeled fluid input">
+                    <div class="ui label">Drafts:</div>
+                    <select class="ui selection fluid dropdown" id="drafts"></select>
+                    <div class="ui icon button" onclick="new_draft_post()">
+                        <i class="io plus icon"></i>
+                    </div>
                 </div>
+                <div class="ui divider"></div>
+                <div id="bodies_editor_container"></div>
             </div>
 
             <div class="four wide computer twelve wide mobile column">
@@ -43,7 +48,7 @@
                     </div>
                 </div>
                 <div class="ui segment">
-                    <div class="ui fluid button" onclick="submit_form()">Submit</div>
+                    <div class="ui fluid button" id="submit_btn" onclick="submit(this)">Submit</div>
                 </div>
             </div>
         </div>
