[website][hierarchy] [website][hierarchy] Replace breadcrumbs with steps

--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -17,8 +17,7 @@
     <div class="ui padded grid">
         <div class="no-margin-padding column">
             {% include 'search.html' %}
-            <div class="ui segment" id="breadcrumbs_container"
-                 style="height: 71px; text-align: left; margin-top: 0"></div>
+            <div id="breadcrumbs_container" style="text-align: left; margin-bottom: 20px"></div>
 
             <div id="modal"></div>
 
