[website][departments] Refactor components

--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -31,6 +31,8 @@
 
 {% block js %}
 
+    <script type="text/javascript" src="{% static 'subjects/js/subjects.js' %}"></script>
+    <script type="text/javascript" src="{% static 'departments/js/child_departments.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/main.js' %}"></script>
 
