[website] Refactor posts_list component

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -29,7 +29,7 @@
 
     <script type="text/javascript" src="{% static 'students/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
-    <script type="text/javascript" src="{% static 'students/js/student_posts.js' %}"></script>
+    <script type="text/javascript" src="{% static 'posts/js/posts_list.js' %}"></script>
     <script type="text/javascript" src="{% static 'students/js/main.js' %}"></script>
 
 {% endblock %}
