--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -43,7 +43,7 @@
 
     <script type="text/javascript" src="{% static 'departments/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
-    <script type="text/javascript" src="{% static 'students/js/student_posts.js' %}"></script>
+    <script type="text/javascript" src="{% static 'posts/js/posts_list.js' %}"></script>
     <script type="text/javascript" src="{% static 'profile/js/student_drafts.js' %}"></script>
     <script type="text/javascript" src="{% static 'profile/js/main.js' %}"></script>
 
