[website][students] Refactor 'students_list' component

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -28,6 +28,8 @@
 {% block js %}
 
     <script type="text/javascript" src="{% static 'students/js/search.js' %}"></script>
+    <script type="text/javascript" src="{% static 'students/js/students_list.js' %}"></script>
+    <script type="text/javascript" src="{% static 'students/js/students_filters.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
     <script type="text/javascript" src="{% static 'posts/js/posts_list.js' %}"></script>
     <script type="text/javascript" src="{% static 'students/js/main.js' %}"></script>
