--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -31,6 +31,7 @@
 
 {% block js %}
 
+    <script type="text/javascript" src="{% static 'students/js/students_list.js' %}"></script>
     <script type="text/javascript" src="{% static 'subjects/js/subjects.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/child_departments.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/search.js' %}"></script>
