[website][students] Add 'department' field to filters

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -29,6 +29,7 @@
 
     <script type="text/javascript" src="{% static 'students/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'students/js/students_list.js' %}"></script>
+    <script type="text/javascript" src="{% static 'departments/js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'students/js/students_filters.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
     <script type="text/javascript" src="{% static 'posts/js/posts_list.js' %}"></script>
