[website] Update AdSense tag

--- a/website/templates/tags/google_adsence.html
+++ b/website/templates/tags/google_adsence.html
@@ -1,8 +1,2 @@
 <!-- Google AdSense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-8915976864571228",
-        enable_page_level_ads: true
-    });
-</script>
+<script data-ad-client="ca-pub-8915976864571228" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
