[website] Add google analytics and adsense tags to index

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -24,8 +24,9 @@
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     
-    <!-- Аутентификация в Яндекс Вебмастер -->
-    <meta name="yandex-verification" content="c3f40ad459bc9654"/>
+    {% include 'tags/yandex_webmaster.html' %}
+    {% include 'tags/google_analytics.html' %}
+    {% include 'tags/google_adsence.html' %}
 </head>
 <body>
 
