[website] Update yandex webmaster tag

--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    {% include 'tags/yandex_webmaster.html' %}
     {% include 'tags/google_analytics.html' %}
     {% include 'tags/google_adsence.html' %}
 
