[website][ads] Fix ad space

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -26,7 +26,9 @@
                             <div id="filters_container"></div>
                         </div>
                         <div class="ui segment">
-                            {% include 'ads/adsense/square.html' %}
+                            <div class="ui medium rectangle ad">
+                                {% include 'ads/adsense/square.html' %}
+                            </div>
                         </div>
                     </div>
                     <div class="five wide computer ten wide tablet sixteen wide mobile column">
