[website][ads] Fix margins

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -26,7 +26,7 @@
                             <div id="filters_container"></div>
                         </div>
                         <div class="ui segment">
-                            <div class="ui medium rectangle ad">
+                            <div class="ui medium rectangle ad" style="margin: auto">
                                 {% include 'ads/adsense/square.html' %}
                             </div>
                         </div>
