--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -34,6 +34,8 @@
 
     <!-- Semantic UI alerts -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/ui-alerts.css' %}">
+    <!-- Check AdBlock -->
+    <script type="text/javascript" src="{% static 'js/prebid-ads.js' %}"></script>
 
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700,700i|Alegreya:400,400i,500,500i,700,700i|Roboto+Slab:400,700|Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic">
