[website] Rename 'Departments' to 'Universities' tab

--- a/website/templates/main_navbar.html
+++ b/website/templates/main_navbar.html
@@ -48,7 +48,7 @@
 
                 <li>
                     <a href="{% url 'departments' %}">
-                        Departments <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-university"></i>
+                        Universities <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-university"></i>
                     </a>
                 </li>
 
