--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -1,7 +1,7 @@
 <div class="ui segment" id="search_container">
     <div class="ui stackable grid">
         <div class="left floated sixteen wide column">
-            <div class="ui fluid search">
+            <div class="ui search" id="top_search">
                 <div class="ui left icon fluid input" style="max-width: 600px">
                     <i class="search icon"></i>
                     <input class="prompt" id="search" type="text" placeholder="Enter search query"
