[website][chats] Add 'chats' page

--- a/website/templates/main_navbar.html
+++ b/website/templates/main_navbar.html
@@ -47,6 +47,12 @@
                 </li>
 
                 <li>
+                    <a href="{% url 'chats' %}">
+                        Chats <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas comments icon"></i>
+                    </a>
+                </li>
+
+                <li>
                     <a href="{% url 'departments' %}">
                         Universities <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-university"></i>
                     </a>
