[website][chats] Implement basic UI for chats and messages

--- a/website/templates/chats.html
+++ b/website/templates/chats.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    Departments
+    Chats
 {% endblock %}
 
 {% block head %}
@@ -15,9 +15,9 @@
 {% block content %}
 
     <div class="ui padded chats grid">
-        <div class="ui segment no-margin-padding four wide computer six wide tablet column" id="chat_list"></div>
-        <div class="ui segment no-margin-padding eight wide computer ten wide tablet column" id="chat_content"></div>
-        <div class="ui segment no-margin-padding four wide computer only column" id="chat_bar"></div>
+        <div class="ui segment no-margin-padding four wide computer six wide tablet left column" id="chat_list"></div>
+        <div class="ui segment no-margin-padding eight wide computer ten wide tablet center column" id="chat_content"></div>
+        <div class="ui segment no-margin-padding four wide computer only right column" id="chat_bar"></div>
     </div>
 
 {% endblock %}
