--- a/website/static/chats/css/main.css
+++ b/website/static/chats/css/main.css
@@ -3,19 +3,65 @@
 }
 
 .chats.grid {
-    height: 100%
+    height: 100%;
+    text-align: left;
 }
 
 .top.segment {
+    border-radius: 0;
+    margin: 0;
     height: 70px;
 }
 
-.bottom.segment {
-    height: 70px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    border-style: solid;
+.middle.segment {
     border-radius: 0;
-    border-width: 2px 0px;
+    margin: 0;
+    min-height: 100px;
+}
+
+.bottom.segment {
+    border-radius: 0;
+    margin: 0;
+    height: 70px;
+    border-style: solid;
+    border-width: 2px 0;
+}
+
+.left .middle {
+    height: calc(100% - 70px);
+}
+
+.center .middle {
+    height: calc(100% - 70px - 70px);
+}
+
+.right .middle {
+    height: calc(100% - 70px);
+}
+
+.extra-btn {
+    position: absolute;
+    right: 10px;
+    top: 16px
+}
+
+#new_chat_form {
+    display: none;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+}
+
+.rotated {
+    transform:rotate(45deg);
+    -webkit-transform:rotate(45deg);
+    -moz-transform:rotate(45deg);
+    -o-transform:rotate(45deg);
+}
+
+#chat_messages_container {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 20px;
 }
