--- a/website/templates/chats.html
+++ b/website/templates/chats.html
@@ -25,6 +25,7 @@
 
 {% block js %}
 
+    <script type="text/javascript" src="{% static 'chats/js/emojis.js' %}"></script>
     <script type="text/javascript" src="{% static 'chats/js/main.js' %}"></script>
 
 {% endblock %}
