--- a/website/static/chats/css/main.css
+++ b/website/static/chats/css/main.css
@@ -17,6 +17,12 @@
     border-radius: 0;
     margin: 0;
     min-height: 100px;
+    overflow-y: auto;
+}
+
+.avatar {
+    height: 50px !important;
+    width: 50px !important;
 }
 
 .bottom.segment {
@@ -79,6 +85,10 @@
     height: 100px;
 }
 
+#chats_list_container {
+    height: 100px;
+}
+
 #emojis_list > div {
     margin: 5px;
     padding: 10px;
@@ -89,4 +99,25 @@
 #emojis_list > div:hover {
     background-color: #DBC6EB;
     border-radius: 5px;
+}
+
+* {
+  --scrollbar-color: #00000000;
+}
+
+*:hover, *:focus, *:focus-within {
+  --scrollbar-color: #00000040 !important;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #00000000;
+  border: 5px solid transparent;
+  border-radius: 24px;
+  box-shadow: 4px 0 0 4px var(--scrollbar-color) inset;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbar-color);
+  border: 0 solid transparent;
+  box-shadow: none;
 }
