[website][moderation] Implement moderation of posts and hierarchy

--- a/website/templates/moderation.html
+++ b/website/templates/moderation.html
@@ -25,6 +25,6 @@
 
 {% block js %}
 
-    <script type="text/javascript" src="{% static 'js/moderation.js' %}"></script>
+    <script type="text/javascript" src="{% static 'moderation/main.js' %}"></script>
 
 {% endblock %}
