[tools] Add main page with tools

--- a/website/templates/main_navbar.html
+++ b/website/templates/main_navbar.html
@@ -64,6 +64,13 @@
                     </a>
                 </li>
 
+                <li>
+                    <a href="{% url 'tools' %}">
+                        Tools
+                        <i style="font-size: 16px;"
+                           class="pull-right hidden-xs showopacity fas fa-cogs"></i>
+                    </a>
+                </li>
 
                 <li>
                     <a href="{% url 'memes' %}">
