--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -16,8 +16,7 @@
 
     <div class="ui padded grid">
         <div class="no-margin-padding column">
-            {% include 'search.html' %}
-            <div id="breadcrumbs_container" style="text-align: left; margin-bottom: 20px"></div>
+            <div id="breadcrumbs_container" style="text-align: left; margin-bottom: 20px; min-height: 70px"></div>
 
             <div id="modal"></div>
 
