--- a/website/templates/main_navbar.html
+++ b/website/templates/main_navbar.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <nav class="navbar navbar-default navbar-position sidebar" role="navigation">
     <div class="container-fluid">
