--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -14,16 +14,9 @@
 
 {% block content %}
 
-    <div class="ui padded grid">
-        <div class="no-margin-padding column">
-            <div id="breadcrumbs_container" style="text-align: left; margin-bottom: 20px; min-height: 70px"></div>
+    <div id="modal"></div>
 
-            <div id="modal"></div>
-
-            <div class="ui centered stackable grid" id="departments_container"></div>
-
-        </div>
-    </div>
+    <div id="hierarchy_root"></div>
 
 {% endblock %}
 
