--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -16,13 +16,13 @@
     <div id="edit_form_modal_container"></div>
 
     <div class="ui padded centered stackable grid" style="text-align: left; padding-top: 20px">
-        <div class="four wide column">
+        <div class="five wide computer seven wide tablet column">
             <div class="ui basic no-margin-padding segment" style="min-height: 80px"
                  id="personal_info_container"></div>
             <div class="ui segment" style="min-height: 80px; margin-bottom: 40px"
                  id="user_department_container"></div>
         </div>
-        <div class="six wide column">
+        <div class="six wide computer nine wide tablet column">
             <div class="ui segment">
                 <div class="ui pointing secondary menu">
                     <a class="active item" data-tab="posts_tab">Posts</a>
